# py-git

./: CHANGELOG.md  py-git.py  pyproject.toml  test.ipynb
.py-git/: index  log.txt
core/: __init__.py  add.py  checkout.py  commit.py  diff.py  init.py  logs.py  status.py
helpers/: commit_files.py  current_files.py
py_git/: py-git.py
